--- a/client/templates/editProfile/editProfile_template.html
+++ b/client/templates/editProfile/editProfile_template.html
@@ -21,6 +21,10 @@
             <div class="column"><button class="fluid ui positive button" type="submit">Enregistrer</button></div>
           </div>
         </div>
+        <br>
+        <a class="ui fluid orange button" href="{{pathFor 'atChangePwd'}}">
+          Changer de mot de passe
+        </a>
         <hr>
         <button type="button" class="ui fluid red button" data-action="deleteMe">
           Supprimer ce compte
