--- a/client/templates/home/home_template.html
+++ b/client/templates/home/home_template.html
@@ -4,27 +4,30 @@
       <div class="ui raised center aligned segment">
         <h3 class="ui header">Bienvenue sur votre Loyali</h3>
         {{#if isMobile}}
-        <button type="button" class="ui labeled icon button fluid positive" data-action="scan"><i class="qrcode icon"></i>Scanner un code client</button>
+        <button type="button" class="ui labeled icon button fluid green" data-action="scan"><i class="qrcode icon"></i>Scanner un code client</button>
         <br>
         {{/if}}
         <a class="ui labeled icon button fluid teal" href="{{pathFor 'customers' placeId=currentUser.profile.currentPlace}}"><i class="users icon"></i>Gérez vos clients</a>
         <br>
-        <a class="ui labeled icon button fluid blue" href="{{pathFor 'myPlaces'}}"><i class="setting icon"></i>Gérez vos commerces</a>
+        <a class="ui labeled icon button fluid orange" href="{{pathFor 'myPlaces'}}"><i class="setting icon"></i>Gérez vos commerces</a>
         <br>
         <a class="ui labeled icon button fluid" href="{{pathFor 'contact'}}"><i class="mail icon"></i>Contacter Loyali</a>
       </div>
+    {{else}}
+      {{#if isConnected}}
+      <div class="ui raised center aligned segment">
+        <h3 class="ui header">Mon code Loyali</h3>
+        {{> QrCode text=qrText }}
+      </div>
+      {{/if}}
     {{/if}}
     {{#unless isMobile}}
       <div class="ui raised center aligned segment">
         <h4>Disponible sur <a class="ui link" href="https://itunes.apple.com/fr/app/loyali/id1073418073" target="_blank"><i class="apple icon"></i>App Store</a> et <a href="https://play.google.com/store/apps/details?id=loya.ly.app" target="_blank"><i class="play icon"></i>Google Play</a></h4>
       </div>
     {{/unless}}
-    <form id="search">
-      <div class="ui large fluid icon input">
-        <input type="text" placeholder="Commerce, ville, cp" id="searchQuery">
-        <i class="search link icon" id="searchIcon"></i>
-      </div>
-    </form>
+
+    {{#unless isConnected}}
     <div class="ui basic center aligned segment">
       <h2 class="ui icon header">
         <img class="ui tiny image" src="{{loyaliLogo}}" alt="icône Loyali" data-action="loyaltyCards" data-intro="Cette icône Loyali est un raccourci vers vos cartes de fidélité" data-step="4" data-position="bottom-middle-aligned" />
@@ -35,8 +38,6 @@
       </h2>
       {{> loginText}}
     </div>
-
-    {{#unless isConnected}}
     <div class="ui raised segment">
       <h2 class="ui icon header center aligned">
          <i class="blue users icon" data-action="vouchers"></i>
