--- a/client/templates/addCard/addCard_template.html
+++ b/client/templates/addCard/addCard_template.html
@@ -2,7 +2,7 @@
 
     <h2>Ajoutez une de vos cartes de fidélité</h2>
     {{#if isMobile}}
-    <button id="scanCard" class="ui fluid button">Scanner la carte</button>
+    <button id="scanCard" class="ui fluid green labeled icon button"><i class="barcode icon"></i>Scanner la carte</button>
     {{/if}}
     {{#autoForm id="addCard" type="insert" collection="PrivateLoyaltyCards" enctype="multipart/form-data" doc=this}}
       {{> afQuickField placeholder="schemaLabel" name="name" id="cardName"}}
