--- a/client/templates/editCard/editCard_template.html
+++ b/client/templates/editCard/editCard_template.html
@@ -7,7 +7,7 @@
     {{> imageEdit imageId=imageId}}
     <h2>Editer votre carte de fidélité {{name}}</h2>
     {{#if isMobile}}
-    <button id="scanCard" class="ui fluid button">Scanner la carte</button>
+    <button id="scanCard" class="ui fluid green labeled icon button"><i class="barcode icon"></i>Scanner la carte</button>
     {{/if}}
     {{#autoForm id="editCard" type="update" collection="PrivateLoyaltyCards" enctype="multipart/form-data" doc=this}}
       {{> afQuickField placeholder="schemaLabel" name="name" id="cardName"}}
