--- a/client/templates/loyaltyCards/loyaltyCards_template.html
+++ b/client/templates/loyaltyCards/loyaltyCards_template.html
@@ -66,7 +66,10 @@
         {{/each}}
       </div>
     </div>
-    <button type="button" class="ui button fluid" id="intro">Besoin d'aide ?</button>
-    <br>
+    <div class="ui grid">
+      <div class="one column row">
+        <div class="column"><button type="button" class="ui labeled icon yellow fluid button" id="intro"><i class="help icon"></i>Aide</button></div>
+      </div>
+    </div>
 
 </template>
