--- a/client/templates/cardsBrands/cardsBrands_template.html
+++ b/client/templates/cardsBrands/cardsBrands_template.html
@@ -7,7 +7,11 @@
         <div class="ui middle aligned animated list">
           {{#each cardsBrands}}
           <div class="item">
-            {{> image imageId=imageId classNames='mini rounded'}}
+            {{#if imageId}}
+              <i class="checkmark green icon"></i>
+            {{else}}
+              <i class="remove red icon"></i>
+            {{/if}}
             <div class="content">
               <a class="header" href="{{pathFor 'cardBrand' cardBrandId=_id}}">{{name}} <small>{{baseline}}</small></a>
               <div class="description"><small>Mise à jour {{#if updatedAt}}{{fromNow updatedAt}}{{else}}{{fromNow createdAt}}{{/if}}</small></div>
