--- a/client/templates/_comons/sidebar/sidebar_template.html
+++ b/client/templates/_comons/sidebar/sidebar_template.html
@@ -45,7 +45,7 @@
       {{/if}}
     {{/unless}}
     <a class="item {{isActiveRoute 'about'}}" href="{{pathFor 'about'}}">
-      <i class="question icon"></i>
+      <i class="info icon"></i>
       A propos
     </a>
   </div>
