Cards all the way

--- a/client/templates/editCard/editCard_template.html
+++ b/client/templates/editCard/editCard_template.html
@@ -5,7 +5,7 @@
       {{> image imageId=imageId classNames='small right floated'}}
     {{/if}}
     {{> imageEdit imageId=imageId}}
-    <h2>Editer votre carte de fidélité {{name}}</h2>
+    <h2>Editer votre carte {{name}}</h2>
     {{#if isMobile}}
     <button id="scanCard" class="ui fluid green labeled icon button"><i class="barcode icon"></i>Scanner la carte</button>
     {{/if}}
