--- a/client/templates/card/card_template.html
+++ b/client/templates/card/card_template.html
@@ -1,25 +1,40 @@
 <template name='card'>
   {{#with card}}
+    <br>
+    <div class="ui one stackable cards">
+      <div class="card">
+        {{#if imageId}}
+        <div class="image">
+          {{> image imageId=imageId}}
+        </div>
+        {{/if}}
+        <div class="content">
+          <a class="header">{{name}}</a>
+          <div class="meta">
+            <span class="date">{{points}}</span>
+          </div>
+          <div class="description">
+            {{#if isQrCode format}}
+              {{> QrCode text=code classNames="large centered"}}
+            {{else}}
+              <canvas id="barcodeCanvas" width="300" height="100"></canvas>
+            {{/if}}
+          </div>
+          <h5 class="ui center aligned header">{{code}}</h5>
+        </div>
+        {{#if notes}}
+        <div class="extra content">
+          <a>
+            <i class="info icon"></i>
+            {{notes}}
+          </a>
+        </div>
+        {{/if}}
+      </div>
+    </div>
 
-    <div class="ui center aligned basic segment">
-      <h1 class="ui header">
-        {{name}}
-        <div class="sub header">{{points}}</div>
-      </h1>
-      {{#if imageId}}
-        {{> image imageId=imageId classNames='small centered'}}<br>
-      {{/if}}
-      {{#if isQrCode format}}
-        {{> QrCode text=code classNames="large centered"}}
-      {{else}}
-        <canvas id="barcodeCanvas" width="300" height="100"></canvas>
-      {{/if}}
-      <h5 class="ui header">{{code}}</h5>
-      <p>
-        {{notes}}
-      </p>
-      <a href="{{pathFor 'loyaltyCards'}}" class="left floated ui circular icon button"><i class="arrow left icon"></i></a>
-      <a href="{{pathFor 'editCard' cardId=_id}}" class="teal right floated ui circular icon button"><i class="pencil icon"></i></a>
+    <div class="ui  basic segment">
+      <a href="{{pathFor 'editCard' cardId=_id}}" class="ui labeled icon basic green fluid button"><i class="pencil icon"></i>Editer</a>
     </div>
 
   {{/with}}
