Add remove more points

--- a/client/templates/card/card_template.html
+++ b/client/templates/card/card_template.html
@@ -22,7 +22,7 @@
             <p>{{code}}</p>
           </div>
         </div>
-        {{#if notes}}
+        {{#if points}}
         <div class="extra content">
           <a>
             <i class="arrow right icon"></i>
