--- a/client/templates/placeHistories/placeHistories_template.html
+++ b/client/templates/placeHistories/placeHistories_template.html
@@ -22,6 +22,14 @@
         </div>
       </div>
       {{/each}}
+      {{else}}
+      <h2 class="ui center aligned icon header">
+        <i class="star yellow icon"></i>
+        <div class="content">
+          Pas encore d'historique de points
+          <div class="sub header">Mais ça pourrais vite changer ツ</div>
+        </div>
+      </h2>
       {{/with}}
     </div>
   </div>
@@ -43,6 +51,14 @@
         </div>
       </div>
       {{/each}}
+      {{else}}
+      <h2 class="ui center aligned icon header">
+        <i class="ticket blue icon"></i>
+        <div class="content">
+          Pas encore d'historique d'avoir
+          <div class="sub header">Mais ça pourrais vite changer ツ</div>
+        </div>
+      </h2>
       {{/with}}
     </div>
   </div>
