--- a/client/templates/home/home_template.html
+++ b/client/templates/home/home_template.html
@@ -59,7 +59,7 @@
     {{else}}
     <div class="ui grid">
       <div class="one column row">
-        <div class="column"><a type="button" class="ui labeled icon basic green fluid button" href="{{pathFor 'loyaltyCards'}}"><i class="star icon"></i>Mes cartes</a></div>
+        <div class="column"><a type="button" class="ui labeled icon basic blue fluid button" href="{{pathFor 'loyaltyCards'}}"><i class="yellow star icon"></i>Mes cartes</a></div>
       </div>
     </div>
     {{/unless}}
