--- a/client/templates/place/place_template.html
+++ b/client/templates/place/place_template.html
@@ -61,8 +61,8 @@
     {{else}}
     <br>
     {{/if}}
-    <div class="ui one stackable cards">
-      <div class="ui card">
+    <div class="ui stackable link cards">
+      <div class="card">
         <div class="image">
             {{> image imageId=imageId}}
         </div>
