--- a/client/templates/card/card_template.html
+++ b/client/templates/card/card_template.html
@@ -1,7 +1,7 @@
 <template name='card'>
   {{#with card}}
     <br>
-    <div class="ui stackable cards">
+    <div class="ui stackable cards centered">
       <div class="card">
         {{#if imageId}}
         <div class="image">
