--- a/client/templates/place/place_template.html
+++ b/client/templates/place/place_template.html
@@ -61,7 +61,7 @@
     {{else}}
     <br>
     {{/if}}
-    <div class="ui stackable link cards">
+    <div class="ui stackable link cards centered">
       <div class="card">
         <div class="image">
             {{> image imageId=imageId}}
